<resources>
    <string name="app_name">RealEstateManager</string>

    // BASE
    <string name="unknown_error_message">an unknown error occurred</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="network_dialog_title">Network</string>
    <string name="network_required">this section requires internet</string>
    <string name="location_dialog_title">Location</string>
    <string name="location_required">this section requires location</string>

    <string name="property_photo_content_description">Property photo</string>

    // MAIN ACTIVITY TOOLBAR MENU
    <string name="main_activity_toolbar_menu_creation_button_title">add new property</string>
    <string name="main_activity_toolbar_menu_map_view_button_title">map view</string>

    // PROPERTY INFO TITLES
    <string name="info_title_general">General</string>
    <string name="info_title_rooms">Number of rooms</string>
    <string name="info_title_location">Location</string>
    <string name="info_title_more">More</string>
    <string name="info_title_description">Description</string>
    <string name="info_title_points_of_interests">Points of interests</string>
    <string name="info_title_photo">Photos</string>

    // DETAILS FRAGMENT
    <string name="media_title_details_fragment">Media</string>
    <string name="description_title_details_fragment">Description</string>
    <string name="rooms_title_details_fragment">%1$d rooms</string>
    <string name="bathrooms_title_details_fragment">%1$d bathrooms</string>
    <string name="bedrooms_title_details_fragment">%1$d bedrooms</string>
    <string name="location_title_details_fragment">$addressFirst$s\n$addressSecond$s\n%district$s\n%zip$s n%city$s</string>

    // FORM FRAGMENT
    <string name="required_info">* required</string>
    <string name="type_hint_form_fragment">type*</string>
    <string name="price_hint_form_fragment">price*</string>
    <string name="surface_hint_form_fragment">surface*</string>
    <string name="estate_agent_hint_form_fragment">estate agent</string>
    <string name="description_hint_form_fragment">description</string>
    <string name="description_required_hint_form">description*</string>
    <string name="number_of_rooms_hint_form_fragment">rooms</string>
    <string name="number_of_bathrooms_hint_form_fragment">bathrooms</string>
    <string name="number_of_bedrooms_hint_form_fragment">bedrooms</string>
    <string name="address_first_hint_form_fragment">address*</string>
    <string name="address_second_hint_form_fragment">address complements</string>
    <string name="city_hint_form_fragment">city*</string>
    <string name="zip_code_hint_form_fragment">zip code*</string>
    <string name="near_school_hint_form_fragment">near school</string>
    <string name="near_transports_hint_form_fragment">near transports</string>
    <string name="near_shops_hint_form_fragment">near shops</string>
    <string name="near_parks_hint_form_fragment">near parks</string>
    <string name="required_field">this field is required</string>

    // CREATION FRAGMENT
    <string name="type_hint_creation_fragment">type*</string>
    <string name="price_hint_creation_fragment">price*</string>
    <string name="surface_hint_creation_fragment">surface*</string>
    <string name="number_of_rooms_hint_creation_fragment">number of rooms</string>
    <string name="number_of_bathrooms_hint_creation_fragment">number of bathrooms</string>
    <string name="number_of_bedrooms_hint_creation_fragment">number of bedrooms</string>
    <string name="description_hint_creation_fragment">description</string>
    <string name="address_hint_creation_fragment">address*</string>
    <string name="address_complements_hint_creation_fragment">address complements</string>
    <string name="city_hint_creation_fragment">city*</string>
    <string name="zip_code_hint_creation_fragment">zip code*</string>
    <string name="points_of_interest_hint_creation_fragment">points of interest</string>
    <string name="estate_agent_hint_creation_fragment">estate agent</string>
    <string name="title_activity_maps">Map</string>

    // SEARCH ACTIVITY
    <string name="creation_after_text_button_search_activity">CREATED AFTER</string>
    <string name="creation_before_text_button_search_activity">CREATED BEFORE</string>
    <string name="sold_after_text_button_search_activity">SOLD AFTER</string>
    <string name="sold_before_text_button_search_activity">SOLD BEFORE</string>

    <string name="request_camera_permission">RealEstateManager needs access to the camera</string>

    // NOTIFICATION
    <string name="notification_title">Real Estate Manager</string>
    <string name="notification_text">A new property has been added</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="preference_file_key">rem_preference</string>

    <string name="settings_title">Settings</string>
    <string name="search_title">Search</string>
    <string name="creation_title">Creation</string>
    <string name="modification_title">Modification</string>
    <string name="map_title">Map</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>